# circuits_simulator

./: .gitignore  Cargo.toml  README.md
examples/: rlc_square_wave.rs
src/: circuit.rs  component.rs  dipole.rs  emulation.rs  error.rs  fourier.rs  generator.rs  initial.rs  lib.rs  main.rs  test.rs  update.rs  util.rs
src/structs/: circuit.rs  component.rs  default.rs  dipole.rs  mod.rs  node.rs  source.rs
