[package]
name = "circuits_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.1"
num-traits = "0.2.18"
fractios = { version = "0.1.0", git = "https://github.com/Silzinc/fractios" }
polyx = { version = "0.1.0", git = "https://github.com/Silzinc/polyx" }
rustfft = "6.2.0"
serde = "1.0.197"

[dev-dependencies]
plotters = "0.3.5"

[profile.release]
lto = true
strip = true

# Plotters patch
[patch.crates-io]
pathfinder_simd = { git = "https://github.com/servo/pathfinder.git", rev = "dc6034f" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder.git", rev = "dc6034f" }
